[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/JAi_____.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/paper_math.gd" type="Script" id=2]
[ext_resource path="res://large-paper.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Button2.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Button3.gd" type="Script" id=6]
[ext_resource path="res://new_styleboxflat.tres" type="StyleBox" id=7]
[ext_resource path="res://hover_stylebox.tres" type="StyleBox" id=8]
[ext_resource path="res://pressed_styleboxflat.tres" type="StyleBox" id=9]
[ext_resource path="res://muscandfx/Page Turning Sfx.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 135, 195 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.941176, 0.890196, 0.890196, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="paper_math" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
input_pickable = true
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 11 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = -110.0
margin_top = -172.0
margin_right = 140.0
margin_bottom = -142.0
rect_min_size = Vector2( 250, 30 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
text = "Time Left: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, 11 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -99.0
margin_top = -140.0
margin_right = 101.0
margin_bottom = -20.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiple_choice" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="multiple_choice"]
margin_left = -99.0
margin_top = 72.0
margin_right = -69.0
margin_bottom = 102.0
rect_min_size = Vector2( 30, 30 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
shortcut_in_tooltip = false
action_mode = 0
text = "A"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="multiple_choice/Button"]
margin_left = -10.0
margin_top = -50.0
margin_right = 60.0
margin_bottom = -10.0
rect_min_size = Vector2( 60, 40 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="multiple_choice"]
margin_left = -16.0
margin_top = 72.0
margin_right = 14.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 30, 30 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
action_mode = 0
text = "B"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="multiple_choice/Button2"]
margin_left = -20.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -10.0
rect_min_size = Vector2( 60, 40 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="multiple_choice"]
margin_left = 72.0
margin_top = 72.0
margin_right = 102.0
margin_bottom = 102.0
rect_min_size = Vector2( 30, 30 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
action_mode = 0
text = "C"
clip_text = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="multiple_choice/Button3"]
margin_left = -27.0
margin_top = -50.0
margin_right = 43.0
margin_bottom = -10.0
rect_min_size = Vector2( 60, 40 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 10, 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true
[connection signal="mouse_entered" from="." to="." method="mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="mouse_exited"]
[connection signal="toggled" from="multiple_choice/Button" to="." method="_on_Button_toggled"]
[connection signal="toggled" from="multiple_choice/Button2" to="." method="_on_Button2_toggled"]
[connection signal="toggled" from="multiple_choice/Button3" to="." method="_on_Button3_toggled"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
